# AgentManager

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_EN.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: README.md
docs/architecture/: overview.md
docs/guides/: setup.md
docs/plans/: README.md
docs/plans/2026-04-13/: ai-engineering-practices.md
scripts/: install.sh  move-to-space.swift  patch-plist.sh
src/: App.tsx  SPEC.md  i18n.ts  main.tsx  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  SPEC.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_history.rs  commands.rs  hook_install.rs  http_server.rs  iterm.rs  lib.rs  main.rs  state.rs
src/components/: ClaudeHistoryList.tsx  ContextMenu.tsx  SessionCard.tsx  SetupBanner.tsx  SortableCard.tsx
src/locales/: en.json  zh.json
