[package]
name = "agent-manager"
version = "0.1.0"
description = "AgentManager - Claude Code session dashboard"
authors = ["xiaocao"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agent_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
objc = "0.2"
core-foundation = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
